fix subtechniques' technique offline view, redesign matrix menu, fix bugs and design issues, improve offline viewer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
     <div class="app-container">
         <div class="nav-app">
             <tabs (onUserThemeChange)="themeChangeHandler($event)" [userTheme]="user_theme"></tabs>
-            <h1 class="version-footer z-0">
+            <h1 class="version-footer z-0 select-none cursor-default">
                <span class="opacity-20">
                 MITRE </span> <br />
                 <span class="tracking-tight text-4xl font-semibold opacity-20">ATT&CK Navigator</span>
