--- a/src/app/matrix/technique-cell/contextmenu/contextmenu.component.scss
+++ b/src/app/matrix/technique-cell/contextmenu/contextmenu.component.scss
@@ -1,70 +1,6 @@
+/* MacOS-style context menu styles */
 @import '../cell-popover.scss';
 @import '../../../../colors.scss';
-.contextmenu {
-    .cover {
-        z-index: 100;
-        // background: red;
-        // opacity: 0.5;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100vw;
-        height: 100vh;
-        cursor: default;
-    }
-    .menu {
-        cursor: default;
-        @include cell-popover(0.85);
-        @include adaptive-color('background', rgba(80, 80, 80, 0.85), rgba(color(cell-highlight-dark-color), 0.85));
-        .contextMenu-section {
-            &:not(:first-child) {
-                border-top: 1px solid white;
-                margin-top: 2px;
-                padding-top: 2px;
-            }
-            div:not(.link-container) {
-                padding: 3px;
-            }
-            .divider {
-                border-top: 1px solid white;
-                margin-top: 2px;
-                padding: 2px 0 0 0 !important;
-            }
-            .contextMenu-button {
-                cursor: pointer;
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                &:hover {
-                    @include adaptive-color('background', color(cell-highlight-color), darken(color(cell-highlight-dark-color), 10%));
-                }
-            }
-            
-            .contextMenu-sub-button {
-                font-size: 0.9em;
-                padding-left: 12px !important;
-                opacity: 0.8;
-                &:hover {
-                    opacity: 1;
-                }
-            }
-            
-            .contextMenu-button-container {
-                .contextMenu-button {
-                    border-radius: 0;
-                }
-                
-                .contextMenu-sub-button {
-                    border-top: 1px solid rgba(255, 255, 255, 0.2);
-                    margin-top: 1px;
-                }
-            }
-            
-            .offline-indicator {
-                font-size: 0.8em;
-                opacity: 0.7;
-                margin-left: 4px;
-            }
-        }
-    }
-}
+
+/* Any additional custom styles for the context menu can be added here */
+/* Most styling is now handled by Tailwind CSS classes */
