--- a/src/app/matrix/technique-cell/technique-cell.component.html
+++ b/src/app/matrix/technique-cell/technique-cell.component.html
@@ -17,5 +17,7 @@
         [technique]="technique"
         [tactic]="tactic"
         [viewModel]="viewModel"
+        [mouseX]="mouseX"
+        [mouseY]="mouseY"
         (close)="showContextmenu = false; onMouseLeave()"></app-contextmenu>
 </div>
